# rbf-dos-neural-network

./: Cargo.toml  output.csv  output1.csv
data/: model-corrected.json  model.json
src/: kdd_schema.rs  main.rs
