[package]
name = "ddos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
rand = { version = "0.8.5", features=["std_rng"]}
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0.57"
log = "0.4"
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }
env_logger = "0.9.0"
flate2 = "1.0.24"
